[project]
name = "youtube-plus"
version = "2.0.0" 
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.bumpver]
current_version = "2.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} → {new_version}"
tag_message = "Release {new_version}"


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"'
]
"version.py" = [
    '__version__ = "{version}"'
]
